tests/vertical-slice/reject/await_recv_deadline_non_suspendable.hew
// Reject fixture (NEW-7): `await rx.recv() | after d` in a non-suspendable
// context. A default-call-convention free function has no parkable continuation
// for the timer to resume, so this must fail CLOSED at compile time.
//
// Harness verb: hew compile (must fail)
// Expected diagnostic substring: "non-suspendable context"
import std::channel::channel;

fn helper(rx: channel.Receiver<i64>) -> Result<Option<i64>, TimeoutError> {
    await rx.recv() | after 50ms
}

fn main() -> i64 {
    let (tx, rx): (channel.Sender<i64>, channel.Receiver<i64>) = channel.new(1);
    let got = helper(rx);
    let _ = tx;
    match got {
        Ok(inner) => {
            match inner {
                Some(v) => v,
                None => -1,
            }
        },
        Err(_) => -2,
    }
}
